objects/CampaignMember.object
<CustomObject>
    <sharingModel>ControlledByCampaign</sharingModel>
    <fields>
        <fullName>Genomics__c</fullName>
        <description>required for Informatics profiling</description>
        <label>Genomics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Chemistry__c</fullName>
        <description>required for Informatics targeting</description>
        <label>Chemistry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <description>Lookup to Country for Global region - Americas, EMEA, APAC</description>
        <formula>IF(ISBLANK(Country), &quot;None&quot;,

IF(CONTAINS(&quot;US:CA:PR:VI:PM:AR:BZ:BO:BR:CL:CO:CR:EC:SV:FK:GF:GT:GY:HN:MX:NI:PA:PY:PE:SR:UY:VE:AI:AG:AW:BS:BB:BM:KY:CU:DM:DO:GL:GD:GP:HT:JM:MQ:MS:KN:LC:VC:TC:VG:&quot;, Country), &quot;Americas&quot;,

IF(CONTAINS(&quot;AT:BE:CH:DE:DK:ES:FI:FR:GB:IE:IT:LU:NL:NO:PL:SE:AF:BH:BD:BT:BV:IO:KM:IN:IR:KW:MV:NP:OM:PK:QA:SA:LK:AE:YE:DZ:AD:AO:BJ:BW:BF:BI:CM:CV:CF:TD:CG:DJ:EG:GQ:ER:ET:FX:GF:GA:GM:GH:GI:GN:GW:IQ:CI:JO:KE:LB:LS:LR:LY:NU:MG:MW:KZ:LK:MV:SC:ML:MR:MU:YT:MC:MA:MZ:NA:NE:NG:PT:RW:SM:ST:SN:SC:SL:SO:ZA:ES:SH:SD:SZ:TZ:TG:TN:UG:EH:ZM:ZW:CD:VA:AL:AM:AZ:BY:BA:BV:BG:HR:CY:CZ:EE:FO:MK:GE:GR:GL:HU:IS:IL:KZ:KG:LV:LI:LT:MT:MD:ME:RS:RO:RU:SK:SI:SY:TJ:TR:TM:UA:UZ:PS&quot;, Country), &quot;EMEA&quot;,

IF(CONTAINS(&quot;JP:AS:AQ:AU:BN:KH:CN:CX:CC:CK:TP:FJ:PF:TF:GU:HM:HK:ID:KI:LA:MO:MY:MH:FM:MN:MM:NR:NC:NZ:NU:NF:KP:MP:PW:PG:PH:PN:WS:SG:SB:KR:TW:TH:TK:TO:TM:TV:UM:VU:VN:WF&quot;, Country), &quot;APAC&quot;, &quot;Other&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check denotes Member ATTENDED this event</inlineHelpText>
        <label>Attended Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Level__c</fullName>
        <description>Telemarketing Interest Value-VoiceCentric</description>
        <label>Interest Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Educational (Referral)</fullName>
                </value>
                <value>
                    <fullName>Long Term Interest</fullName>
                </value>
                <value>
                    <fullName>Active Interest (Research)</fullName>
                </value>
                <value>
                    <fullName>Committed to Buy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Comments__c</fullName>
        <description>Campaign Specific Member Comments</description>
        <inlineHelpText>Please enter any details specific to this campaign member.</inlineHelpText>
        <label>Member Comments</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <description>Identify List Source</description>
        <inlineHelpText>Identify List that supplied name</inlineHelpText>
        <label>Original Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Process__c</fullName>
        <description>Telemarketing Category for VoiceCentric</description>
        <label>Follow Up Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Agree to Appointment</fullName>
                </value>
                <value>
                    <fullName>Email - Send Email w/Fufillment</fullName>
                </value>
                <value>
                    <fullName>General Inquiry - Other Product</fullName>
                </value>
                <value>
                    <fullName>Lit Fulfillment - Print</fullName>
                </value>
                <value>
                    <fullName>Called-Left Message</fullName>
                </value>
                <value>
                    <fullName>Called- Bad Number</fullName>
                </value>
                <value>
                    <fullName>Called-Spoke to</fullName>
                </value>
                <value>
                    <fullName>Emailed-Received Response</fullName>
                </value>
                <value>
                    <fullName>Emailed-Bounced</fullName>
                </value>
                <value>
                    <fullName>Emailed-No Response</fullName>
                </value>
                <value>
                    <fullName>Converted to Lead</fullName>
                </value>
                <value>
                    <fullName>No Response/Deadend</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Emailed Information</fullName>
                </value>
                <value>
                    <fullName>Left VM &amp; Emailed</fullName>
                </value>
                <value>
                    <fullName>Not the right person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_Glb_Lead_Status__c</fullName>
        <description>This captures the Lead Status on Leads and reflects in Campaign Members.</description>
        <formula>TEXT(Lead.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_GBL_Job_Function__c</fullName>
        <formula>TEXT( Lead.Job_Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Survey_Qualtrics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for workflow rules to send survey to a campaign member.  Qualtrics GloriaM</description>
        <inlineHelpText>Check when this person should receive the designated survey</inlineHelpText>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>